Kolejna dawka progressu, ulepszenie dashboardu uzytkownika, nowe tabele

--- a/project/projectengine/public/mystyles.css
+++ b/project/projectengine/public/mystyles.css
@@ -104,15 +104,13 @@ footer{
 	outline:none;
 	text-align:center;
 	text-decoration:none;
-  transition: background-color .5s;
+  transition: 0.25s;
 }
 		
 .btn:hover {
-  background-color:#5588f5;
-  background-image:linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 40%, #1a5ae6 100%);
-  background-repeat:no-repeat;
-  background-size: 200% 100%; 
-  transition:background-size 1s, background-color 1s;
+  background-color:#5588f56a;
+  box-shadow: 0 8px 10px rgba(0, 0, 0, 0.2);
+  scale: 1.025;
 }
 		
 .btn:active {background-color:#1f65fd; transition:background-size 0}
@@ -146,4 +144,15 @@ footer{
 
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background: linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(37, 117, 252, 0.9));
+}
+
+.card{
+  background-color: white;
+  transition: 0.5s;
+}
+
+.card:hover{
+  background-color: #77cdff32;
+  box-shadow: 0 8px 10px rgba(0, 0, 0, 0.2);
+  scale: 1.025;
 }
