--- a/project/projectengine/public/mystyles.css
+++ b/project/projectengine/public/mystyles.css
@@ -169,3 +169,14 @@ footer{
               0.3em 0.3em 1em rgba(0,0,0,0.3);
  }
  
+ .customslider {
+  width: 100%;
+  overflow-y: scroll;
+}
+
+
+@media (max-width: 850px) {
+  .customslider {
+    width: 300px;
+  }
+}
